--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,27 @@
-dateutils
-django-mptt>=0.2.1
-easy_thumbnails>=1.0-alpha-17
-django-polymorphic>=0.2
-django-filer
-django-taggit
-
+asgiref==3.4.1
+cssselect2==0.4.1
+dateutils==0.6.12
+dj-database-url==0.5.0
+Django==3.2.7
+django-ckeditor==6.1.0
+django-filer==2.0.2
+django-heroku==0.3.1
+django-js-asset==1.2.2
+django-mptt==0.13.3
+django-polymorphic==3.0.0
+django-taggit==1.5.1
+easy-thumbnails==2.8rc0
+gunicorn==20.1.0
+lxml==4.6.3
+Pillow==8.3.2
+psycopg2==2.9.1
+python-dateutil==2.8.2
+pytz==2021.1
+reportlab==3.6.1
+six==1.16.0
+sqlparse==0.4.2
+svglib==1.1.0
+tinycss2==1.1.0
+Unidecode==1.1.2
+webencodings==0.5.1
+whitenoise==5.3.0
